WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
106821
[WK2] REGRESSION(
r138301
): NetworkProcess scheduler never resumes resource loads that were postponed due to connection limit
https://bugs.webkit.org/show_bug.cgi?id=106821
Summary
[WK2] REGRESSION(r138301): NetworkProcess scheduler never resumes resource lo...
Alexey Proskuryakov
Reported
2013-01-14 13:28:05 PST
There is an uninitialized variable, and if it happens to be non-0, loading works badly.
Attachments
proposed fix
(2.01 KB, patch)
2013-01-14 13:29 PST
,
Alexey Proskuryakov
beidson
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2013-01-14 13:29:44 PST
Created
attachment 182618
[details]
proposed fix
Brady Eidson
Comment 2
2013-01-14 13:31:44 PST
Comment on
attachment 182618
[details]
proposed fix View in context:
https://bugs.webkit.org/attachment.cgi?id=182618&action=review
> Source/WebKit2/ChangeLog:4 > + NetworkProcess scheduler never resumes resource loads that were postponed > + due to connection limit
suspendPendingRequests count actually has nothing to do with the per-host limit. May as well just say something like "Completely remove the concept of suspending requests from the network process"
Alexey Proskuryakov
Comment 3
2013-01-14 13:32:44 PST
Committed <
http://trac.webkit.org/changeset/139655
>.
Alexey Proskuryakov
Comment 4
2013-01-14 13:40:26 PST
<
rdar://problem/13010102
>
Alexey Proskuryakov
Comment 5
2013-01-14 14:53:03 PST
> > Source/WebKit2/ChangeLog:4 > > + NetworkProcess scheduler never resumes resource loads that were postponed > > + due to connection limit > > suspendPendingRequests count actually has nothing to do with the per-host limit. May as well just say something like "Completely remove the concept of suspending requests from the network process"
The reason why this is related to per-host limit is that only requests that were delayed (due to the limit or to other reasons) were then checked against m_suspendPendingRequestsCount.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug