        NetworkProcess scheduler never resumes resource loads that were postponed         due to connection limit         https://bugs.webkit.org/show_bug.cgi?id=106821

Reviewed by Brady Eidson.

        * NetworkProcess/NetworkResourceLoadScheduler.cpp:
        (WebKit::NetworkResourceLoadScheduler::servePendingRequests):
        * NetworkProcess/NetworkResourceLoadScheduler.h:
        Remove an uninitialized variable that could prevent loading.



Canonical link: https://commits.webkit.org/125049@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@139655 268f45cc-cd09-0410-ab3c-d52691b4dbfc